--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
         .character {
             width: 170px;
             height: 160px;
-            background-image: url('../static/img/great.png');
+            background-image: url('../static/img/neko/{{character_image}}');
             background-size: 100% 100%;
         }
     </style>
