佐野12/14改修分

--- a/templates/index.html
+++ b/templates/index.html
@@ -314,6 +314,9 @@
         #modal button {
             margin-top: 10px;
         }
+        ul.character_list li a {
+            border:none;
+        }
     </style>
 </head>
 
@@ -363,6 +366,30 @@
             <button onclick="closeModal()">閉じる</button>
         </div>
     </div>
+
+<div>
+<ul class="character_list">
+<li><a href="./?lv=1">LV1</a></li>
+<li><a href="./?lv=2&type=1">LV2 type1</a></li>
+<li><a href="./?lv=2&type=2">LV2 type2</a></li>
+<li><a href="./?lv=2&type=3">LV2 type3</a></li>
+<li><a href="./?lv=3&type=1&sub=1">LV3 type1 理科</a></li>
+<li><a href="./?lv=3&type=1&sub=2">LV3 type1 数学</a></li>
+<li><a href="./?lv=3&type=1&sub=3">LV3 type1 英語</a></li>
+<li><a href="./?lv=3&type=1&sub=4">LV3 type1 社会</a></li>
+<li><a href="./?lv=3&type=1&sub=5">LV3 type1 国語</a></li>
+<li><a href="./?lv=3&type=2&sub=1">LV3 type2 理科</a></li>
+<li><a href="./?lv=3&type=2&sub=2">LV3 type2 数学</a></li>
+<li><a href="./?lv=3&type=2&sub=3">LV3 type2 英語</a></li>
+<li><a href="./?lv=3&type=2&sub=4">LV3 type2 社会</a></li>
+<li><a href="./?lv=3&type=2&sub=5">LV3 type2 国語</a></li>
+<li><a href="./?lv=3&type=3&sub=1">LV3 type3 理科</a></li>
+<li><a href="./?lv=3&type=3&sub=2">LV3 type3 数学</a></li>
+<li><a href="./?lv=3&type=3&sub=3">LV3 type3 英語</a></li>
+<li><a href="./?lv=3&type=3&sub=4">LV3 type3 社会</a></li>
+<li><a href="./?lv=3&type=3&sub=5">LV3 type3 国語</a></li>
+</ul>
+</div>
 
     <button onclick="startTask()">計測開始</button>
     <!-- 音声要素の追加 -->
